test-data/unit/check-python313.test
[case testPEP695TypeParameterDefaultNotSupported]
class C[T = None]:  # E: Type parameter default types not supported when using Python 3.12 type parameter syntax
    pass

def f[T = list[int]]() -> None:  # E: Type parameter default types not supported when using Python 3.12 type parameter syntax
    pass

def g[**P = [int, str]]() -> None:  # E: Type parameter default types not supported when using Python 3.12 type parameter syntax
    pass

type A[T, S = int, U = str] = list[T]  # E: Type parameter default types not supported when using Python 3.12 type parameter syntax
